kubernetes/01 - docs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  selector:
    matchLabels:
      app: docs
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: asia.gcr.io/peerprogram/docs:680b2a2-dirty-UGMGGGDR
        ports:
        - containerPort: 3003
