kubernetes/05 - sessions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions
spec:
  selector:
    matchLabels:
      app: sessions
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
      - name: sessions
        image: asia.gcr.io/peerprogram/sessions:9aa9688
        ports:
        - containerPort: 6969
