kubernetes/06 - sessions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions
  labels:
    app: sessions
spec:
  selector:
    matchLabels:
      app: sessions
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
      - name: sessions
        image: asia.gcr.io/peerprogram/sessions:5b638ae-dirty-3HL5I5DR
        ports:
        - containerPort: 6969
        volumeMounts:
        - name: tls-secrets
          mountPath: "/etc/tls-secrets"
          readOnly: true
      volumes:
      - name: tls-secrets
        secret:
          secretName: onlyduh-tls-secrets
