kubernetes/02 - docs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  labels:
    app: docs-service
spec:
  type: NodePort
  selector:
    app: docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
