kubernetes/04 - code-executor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: code-executor-service
  labels:
    app: code-executor-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3050
    name: code-executor-service
  selector:
    app: code-executor
