kubernetes/05 - sessions-redis-cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-cache
  labels:
    app: sessions-cache
spec:
  selector:
    matchLabels:
      app: sessions-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: sessions-cache
    spec:
      containers:
      - name: sessions-cache
        image: asia.gcr.io/peerprogram/sessions-cache:5b638ae-dirty-SX3ZDWRF
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: sessions-cache-service
  labels:
    app: sessions-cache-service
spec:
  type: NodePort
  selector:
    app: sessions-cache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6379
