kubernetes/06 - sessions-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sessions-service
  labels:
    app: sessions-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 6969
    name: sessions-service
  selector:
    app: sessions-deployment
