kubernetes/07 - sessions-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sessions-service
  labels:
    app: sessions-service
spec:
  type: NodePort
  selector:
    app: sessions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6969
