kubernetes/reverse-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: cs3219
  labels:
    app: reverse-proxy
spec:
  type: ClusterIP
  selector:
    app: reverse-proxy
  ports:
    - targetPort: 3050
      port: 3050
