kubernetes/09 - ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - onlyduh.com
    secretName: onlyduh-tls-secrets
  rules:
  - host: onlyduh.com
    http:
      paths:
      # - pathType: Prefix
      #   path: /
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
