kubernetes/11 - ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "[https://onlyduh.com, https://*.onlyduh.com]"
spec:
  tls:
  - hosts:
    - onlyduh.com
    - docs.onlyduh.com
    secretName: onlyduh-tls-secrets
  rules:
  - host: docs.onlyduh.com
    http:
      paths:
      # - pathType: Prefix
      #   path: /
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: docs-service
            port: 
              number: 80
  - host: sessions.onlyduh.com
    http:
      paths:
      # - pathType: Prefix
      #   path: /
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sessions-service
            port: 
              number: 80
  - host: "onlyduh.com"
    http:
      paths:
      # - pathType: Prefix
      #   path: /
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
